Maps can be loaded, est. time and distance are getting saved from api call