@@ -1,19 +1,34 @@
 package org.group07.tourplanner.bl;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import javafx.beans.property.ObjectProperty;
+import javafx.beans.property.StringProperty;
+import javafx.embed.swing.SwingFXUtils;
+import javafx.scene.image.Image;
 import lombok.Getter;
+import lombok.SneakyThrows;
+import org.group07.tourplanner.dal.ConfigManager;
 import org.group07.tourplanner.dal.Jackson;
+import org.group07.tourplanner.dal.config.MapQuestConfig;
 import org.group07.tourplanner.dal.model.TourItem;
 
+import javax.imageio.ImageIO;
+import java.awt.image.BufferedImage;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URI;
+import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.util.ResourceBundle;
 
 public class MapQuestThread extends Thread {
 
-    private final String key = "Zo9e7MdMG26Xb55t0Fusnyo75Fage2ib";
+    private final String key;
+    private final String keyConfigPath = "/Users/edinmuhovic/Documents/FH 4.Sem/SWE2/TourPlanner/DAL/src/main/resources/org/group07/tourplanner/dal/mapquestconfig.json";
 
     private String requestRoute;
     private String requestMap;
@@ -23,19 +38,33 @@ public class MapQuestThread extends Thread {
 
     private HttpClient client;
 
-    public MapQuestThread(TourItem tourItem){
+    private ObjectProperty<Image> imgProperty;
+    private StringProperty distance;
+    private StringProperty estimate;
+
+    @SneakyThrows
+    public MapQuestThread(TourItem tourItem, ObjectProperty<Image> imgProperty, StringProperty distance, StringProperty estimate){
         this.tourItem = tourItem;
+
+        this.key = ConfigManager.getInstance().loadConfigFromFile(keyConfigPath, MapQuestConfig.class).getKey();
 
         client = HttpClient.newHttpClient();
 
         requestRoute = "http://www.mapquestapi.com/directions/v2/route?key="
                         + key
                         + "&from="
-                        + tourItem.getDeparture()
+                        + tourItem.getDeparture().replace(" ", "-")
                         + "&to="
-                        + tourItem.getDestination()
+                        + tourItem.getDestination().replace(" ", "-")
                         + "&routeType="
                         + tourItem.getTransport();
+
+        this.distance = distance;
+        this.estimate = estimate;
+        this.imgProperty = imgProperty;
+        InputStream stream = new FileInputStream("/Users/edinmuhovic/Documents/FH 4.Sem/SWE2/TourPlanner/App/src/main/resources/activity_indicator.gif");
+        Image image =  new Image(stream, 200, 200, false, false);
+        imgProperty.set(image);
     }
 
     @Override
@@ -50,28 +79,45 @@ public class MapQuestThread extends Thread {
             HttpResponse<String> response = client.send(request,
                     HttpResponse.BodyHandlers.ofString());
 
-            ObjectNode node = Jackson.getInstance().getObjMapper().readValue(response.body(), ObjectNode.class);
+            if(response.statusCode() != 200) {
+                InputStream stream = new FileInputStream("/Users/edinmuhovic/Documents/FH 4.Sem/SWE2/TourPlanner/App/src/main/resources/no-image-icon-15.png");
+                Image image = new Image(stream, 200, 200, false, false);
+                imgProperty.set(image);
+                return;
+            }
 
-            tourItem.setDistance(node.get("distance").asDouble());
-            tourItem.setEstimate(node.get("formattedTime").asText());
+            JsonNode node = Jackson.getInstance().getObjMapper().readValue(response.body(), ObjectNode.class).get("route");
+
+            if(node.get("distance") == null || node.get("formattedTime") == null || node.get("sessionId") == null){
+                InputStream stream = new FileInputStream("/Users/edinmuhovic/Documents/FH 4.Sem/SWE2/TourPlanner/App/src/main/resources/no-image-icon-15.png");
+                Image image = new Image(stream, 200, 200, false, false);
+                imgProperty.set(image);
+                return;
+            }
+
+            ResourceBundle res = ResourceBundle.getBundle("org.group07.tourplanner.app." + "gui_strings", ConfigManager.getInstance().getLocale());
+
+            Double dist = node.get("distance").asDouble();
+            String est = node.get("formattedTime").asText();
+
+            tourItem.setDistance(dist);
+            tourItem.setEstimate(est);
+
+            distance.setValue(res.getString("DETAIL_DISTANCE") + dist);
+            estimate.setValue(res.getString("DETAIL_ESTIMATE") + est);
 
             String sessionID = node.get("sessionId").asText();
 
             requestMap = "https://www.mapquestapi.com/staticmap/v5/map?"
                         + "key="
                         + key
-                        + "session="
+                        + "&session="
                         + sessionID
-                        + "&size=500,500@2x";
+                        + "&size=380,170@2x";
 
-            request = HttpRequest.newBuilder()
-                    .uri(URI.create(requestMap))
-                    .header("Content-Type", "image/jpeg")
-                    .GET()
-                    .build();
-
-            response = client.send(request,
-                    HttpResponse.BodyHandlers.ofString());
+            BufferedImage bufImg = ImageIO.read(new URL(requestMap));
+            Image img = SwingFXUtils.toFXImage(bufImg, null);
+            imgProperty.set(img);
 
         } catch (IOException | InterruptedException e) {
             e.printStackTrace();
